<resources>
    <string name="app_name">Greek or Illness</string>
    <string name="img_description">Greek or Illness Logo</string>
    <string name="x_suffix">%1$dX</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning_msg">Are you sure you want to exit?</string>
    <string name="question">Error: Failed to load question</string>
    <string name="greek">Greek</string>
    <string name="illness">Illness</string>
    <string name="continjue">Continue</string>
    <string name="streak_counter">0X</string>
    <string name="best_streak_counter">0X</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="result">You\'re wrong, I\'m right</string>
    <string name="info">Interesting stuff goes here</string>
    <string-array name="greeks">
        <item>Anacreon; was a Greek lyric poet, notable for his drinking songs and hymns. Later Greeks included him in the canonical list of nine lyric poets.</item>
        <item>Anastasios Gousis; is a Greek sprint athlete. At the 2004 Olympics he made the semi-finals in the 200 m and competed for Greece in the 4x400 m relay.</item>
        <item>Anaximander; was a pre-Socratic Greek philosopher who lived in Miletus, a city of Ionia. He belonged to the Milesian school and learned the teachings of his master Thales.</item>
        <item>Archimedes; was an Ancient Greek mathematician, physicist, engineer, inventor, and astronomer.</item>
        <item>Aristotle; was a Greek philosopher and scientist. According to the Encyclopædia Britannica, "Aristotle was the first genuine scientist in history &#8230; [and] every scientist is in his debt."</item>
        <item>Colaeus; was an ancient Samian explorer and silver merchant, who according to Herodotus arrived at Tartessos circa 640 B.C..</item>
        <item>Cynisca; or Kyneska (born c. 440 BC) was a Greek princess of Sparta. She became the first woman in history to win at the ancient Olympic Games.</item>
        <item>Demy; is a Greek singer. At the 2012 MAD Video Music Awards, she won the award for Best New Artist and 2 other awards.</item>
        <item>Dimitrios Deligiannis; was a Greek athlete. He competed at the 1896 Summer Olympics in Athens. He was one of 17 athletes to start the marathon race and he finished sixth.</item>
        <item>Dionisis Chiotis; is a Greek football (soccer) player, who plays goalkeeper for Trikala in the Football League.</item>
        <item>Dionysius Thrax; was a Hellenistic grammarian and a pupil of Aristarchus of Samothrace.</item>
        <item>Dioxippus; was an ancient Greek pankratiast, renowned for his Olympic victories in the sport of pankration.</item>
        <item>Efstathios Chorafas; was a Greek swimmer, who competed at the 1896 Summer Olympics in Athens. He was the only swimmer to compete in all three of the open swimming events.</item>
        <item>Elena Votsi; is a Greek jewelry designer. In 2003 she designed the Athens 2004 Olympic Medal.</item>
        <item>Euclid; was a Greek mathematician, often referred to as the "father of geometry". His work served as the main textbook for teaching mathematics from the time of its publication until the early 20th century.</item>
        <item>Evridiki; is a Greek rock, pop, and electropop singer. She is best known in Europe for representing her home country, Cyprus, in the Eurovision Song Contest in 1992, 1994 and 2007.</item>
        <item>Fotini Vavatsi; is an archer from Greece. She represented Greece at the 2004 Summer Olympics.</item>
        <item>Fragiskos Alvertis; is a Greek former professional basketball player and current team manager of Panathinaikos Athens.</item>
        <item>Giannis Skarimpas; or Yiannis Skarimbaswas a Greek writer, dramatist, and poet.</item>
        <item>Hippocrates; was a Greek physician of the Age of Pericles (Classical Greece), and is considered one of the most outstanding figures in the history of medicine.</item>
        <item>Hristos Banikas; is a Greek chess grandmaster from Salonica. He won eight Greek championships and an individual silver medal in the 2010 World Team Chess Championship.</item>
        <item>Hydna; was an ancient Greek swimmer and diver given credit for the destruction of the Persian navy around 480 BCE.</item>
        <item>Konstantinos Loumpoutis; is a Greek football player who is currently unattached. He is a defender who plays as a fullback on the left side of the pitch.</item>
        <item>Konstantinos Tzortziou; is a professional League of Legends player, currently playing AD Carry or Marksman for Origen in the European League Championship.</item>
        <item>Kostas Simitis; is a Greek politician who served as Prime Minister of Greece and was leader of the Panhellenic Socialist Movement (PASOK) from 1996 to 2004.</item>
        <item>Lambros Konstantaras; was a Greek film actor who appeared in 80 films between 1940 and 1981. He was born and died in Athens.</item>
        <item>Lavrentis Dianellos; was a Greek actor who died in 1978. In his 27 years of acting he appeared in 200 films, leading one reviewer to call him "ubiquitous".</item>
        <item>Metrobius; was an actor in the Roman Republic, notable for having been the male lover of Lucius Cornelius Sulla Felix, the famed general and dictator.</item>
        <item>Minas Alozidis; is a Greek hurdler. He competes in the 200m and 400m hurdle events. He finished 7th in the 400m hurdles final at the 2006 European Athletics Championships in Gothenburg.</item>
        <item>Nanos Valaoritis; is a Greek writer who has been widely published as a poet, novelist and playwright since 1939.</item>
        <item>Panagiotis Markouizos; is a Greek figure skater. He is a multiple Greek national champion. His highest placement at an ISU championship was 33rd at the 2001 European Figure Skating Championships.</item>
        <item>Pantazidis; was a Greek shooter. He competed at the 1896 Summer Olympics in Athens in the military pistol event.</item>
        <item>Phoebus; is a well-known songwriter in both Greece and Cyprus. Phoebus is mostly known for his music through Despina Vandi and Katy Garbi.</item>
        <item>Pindar; was an Ancient Greek lyric poet from Thebes. Of the canonical nine lyric poets of ancient Greece, his work is the best preserved.</item>
        <item>Publius; is a Maltese Saint. He is venerated as the first Bishop of Malta.</item>
        <item>Pyrros Dimas; is a retired Greek weightlifter. He is currently involved in politics, as a member of the Greek parliament, representing the Panhellenic Socialist Movement.</item>
        <item>Pythagoras; was an Ionian Greek philosopher, mathematician, and has been credited as the founder of the movement called Pythagoreanism.</item>
        <item>Procopius; of Caesarea was a prominent antique scholar from Palaestina Prima. He is commonly held to be the last major historian of the ancient Western world.</item>
        <item>Sanidis; was a Greek shooter. He competed at the 1896 Summer Olympics in Athens in the military pistol event without finishing the competition.</item>
        <item>Sapfo Notara; was a Greek actress, known for supporting capabilities in acting. In Greek movies, she acted in comedies as an aunt or a housewife.</item>
        <item>Socrates; was a classical Greek philosopher credited as one of the founders of Western philosophy. He is an enigmatic figure known chiefly through the accounts of classical writers</item>
        <item>Spyros Gogolos; is an experienced Greek footballer, currently playing for Aris in the Football League 2, as a defender.</item>
        <item>Stelios Mainas; has been working as a stage-, cinema- and television actor since he graduated in 1982. He won the Best Actor Award in Hellenic Film Academy Awards for his role in Tetarti 4:45 in 2015.</item>
        <item>Sotiris Moustakas; was a Greek Cypriot comedy actor from 1964 until he passed away in 2007 at the age of 66.</item>
        <item>Takis Fyssas; is a Greek former international football player who played as a defender. Currently, he is the technical director of the Hellenic Football Federation.</item>
        <item>Thespis; was the first person ever to appear on stage as an actor playing a character in a play (instead of speaking as him or herself).</item>
        <item>Thucydides; was an Athenian historian who has been dubbed the father of "scientific history" because of his strict standards of evidence-gathering and analysis of cause and effect without reference to intervention by the gods.</item>
        <item>Vassilis Tsiartas; is a retired Greek international football player who played as an attacking midfielder. During his career, he scored 12 goals for the national team.</item>
        <item>Xenophon Zolotas; was a Greek economist and served as an interim non-party Prime Minister of Greece.</item>
        <item>Zisis Vryzas; is a former football player and currently the technical director of Veria F.C..</item>
    </string-array>
</resources>